// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<div
  class="components-flex wp-components-flex components-control-group wp-components-control-group css-kzj1sz"
  data-g2-c16t="true"
  data-g2-component="ControlGroup"
>
  <div
    class="components-flex-item wp-components-flex-item components-control-group-item wp-components-control-group-item css-1a60l5v"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="components-flex wp-components-flex components-base-button wp-components-base-button components-button wp-components-button css-5xcnys"
      data-active="false"
      data-destructive="false"
      data-focused="false"
      data-g2-c16t="true"
      data-g2-component="Button"
      data-icon="false"
      type="button"
    >
      <span
        class="components-flex-item wp-components-flex-item css-19mrak6"
        data-g2-c16t="true"
        data-g2-component="ButtonContent"
      >
        Let It
      </span>
      <span
        class="components-elevation wp-components-elevation css-17x6dun"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
  <div
    class="components-flex-item wp-components-flex-item components-control-group-item wp-components-control-group-item css-1jutz7b"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="components-flex wp-components-flex components-base-button wp-components-base-button components-button wp-components-button css-1jmk8wq"
      data-active="false"
      data-destructive="false"
      data-focused="false"
      data-g2-c16t="true"
      data-g2-component="Button"
      data-icon="false"
      type="button"
    >
      <span
        class="components-flex-item wp-components-flex-item css-19mrak6"
        data-g2-c16t="true"
        data-g2-component="ButtonContent"
      >
        Go
      </span>
      <span
        class="components-elevation wp-components-elevation css-17x6dun"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
</div>
`;

exports[`props should render mixed control types 1`] = `
<div
  class="components-flex wp-components-flex components-control-group wp-components-control-group css-kzj1sz"
  data-g2-c16t="true"
  data-g2-component="ControlGroup"
>
  <div
    class="components-flex-item wp-components-flex-item components-control-group-item wp-components-control-group-item css-1a60l5v"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <div
      class="components-flex wp-components-flex components-base-field wp-components-base-field components-select wp-components-select css-1nwhiq4"
      data-g2-c16t="true"
      data-g2-component="SelectWrapper"
    >
      <select
        class="css-pjq1vj"
        data-g2-c16t="true"
        data-g2-component="Select"
        id="salutations"
      />
      <div
        class="components-flex-item wp-components-flex-item css-5yrsrk"
        data-g2-c16t="true"
        data-g2-component="FlexItem"
      >
        <span
          class="components-truncate wp-components-truncate components-text wp-components-text css-duu1p5"
          data-g2-c16t="true"
          data-g2-component="Text"
        >
          <div
            class="components-icon wp-components-icon css-1tw4gp0"
            data-g2-c16t="true"
            data-g2-component="Icon"
          >
            <svg
              fill="none"
              height="14"
              size="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    class="components-flex-item wp-components-flex-item components-control-group-item wp-components-control-group-item css-1jutz7b"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <div
      class="components-flex wp-components-flex components-base-field wp-components-base-field components-text-input wp-components-text-input css-4alors"
      data-g2-c16t="true"
      data-g2-component="TextInputWrapper"
    >
      <input
        autocomplete="off"
        class="css-zn43e4"
        data-g2-c16t="true"
        data-g2-component="TextInput"
        id="fname"
        spellcheck="false"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="components-flex-item wp-components-flex-item components-control-group-item wp-components-control-group-item css-1jutz7b"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="components-flex wp-components-flex components-base-button wp-components-base-button components-button wp-components-button css-1jmk8wq"
      data-active="false"
      data-destructive="false"
      data-focused="false"
      data-g2-c16t="true"
      data-g2-component="Button"
      data-icon="false"
      type="button"
    >
      <span
        class="components-flex-item wp-components-flex-item css-19mrak6"
        data-g2-c16t="true"
        data-g2-component="ButtonContent"
      >
        Let It
      </span>
      <span
        class="components-elevation wp-components-elevation css-17x6dun"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
</div>
`;
